--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tp",
+  "name": "prueba",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,9 +18,6 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@popperjs/core": "^2.11.5",
-    "bootstrap": "^5.2.0",
-    "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
